@@ -41,11 +41,3 @@ Candidate changes:
       -0: kfogel  (Reviewed the change; it's not *so* trivial, and I'm
                    not sure an optimization like this belongs in a
                    patch release.)
-
-  * r9005
-    Documentation clarification on deltify subcommand of svnadmin.
-    Justification: We get asked what it does fairly often.
-    Notes: Not critical, but if someone has time to review it before the
-    release.  If they don't we can live without it until 1.0.2.
-    Votes:
-      +1: breser, dlr
