@@ -20,10 +20,13 @@ http://svn.collab.net/repos/svn/tags/XXX
  * fixed: svn export doesn't export svn:externals. (issue #1750)
  * fixed: svn import doesn't handle EOL or keyword translation. (issue #1756)
  * fixed: svn status -v shows unwanted status of externals (issue #1741)
+ * fixed: allow revert of schedule-replace file that has no props (issue #1775)
  * fixed: svnserve segfault on invalid --listen-host argument.
+ * fixed: switch bug which caused wrong URL to be left in wc.
  * detect invalid UTF8 filenames when native locale is UTF8.
  * improve presentation of directory property conflicts.
  * improve presentation of errors from svnadmin & svnlook.
+ * clarify output of 'svnadmin help deltify'.
  * augment copyright notice to --version output.
  * more book updates.
 
@@ -31,8 +34,11 @@ http://svn.collab.net/repos/svn/tags/XXX
  * remove obsolete auth provider examples.
  * prevent potential ra_dav commit race-condition.
  * fix svn_io_dir_walk 'dot-first' ordering required by 'svnadmin hotcopy'.
+ * fix error leaks in dav_svn_convert_err()
  * upgrade win32 innosettup tools and redhat RPMs.
  * fix compile warning:  compressed streams on LP64 architecture.
+ * use cpio to generate tarballs instead of GNU tar.
+ * tweaks to dist.sh.
  * fix bindings on win32.
  * fix perl bindings build on OS X.
  * fix perl bindings:  bug which rejects string revnums.
